# GGnet

./: .bandit  .gitignore  .safety  ADMIN_LOGIN_GUIDE.md  BACKUP_RESTORE.md  CHANGELOG.md  CODECOV_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  ESLINT_CLEANUP_SUMMARY.md  FINAL_STARTUP_GUIDE.md  FINAL_SUMMARY.md  FINAL_VALIDATION.md  FULL_FRONTEND_RESET.bat  GGROCK_COMPARISON.md  GGROCK_FULL_ANALYSIS.md  GGROCK_IMAGES_ANALYSIS.md  GGROCK_PARITY_FINAL.md  LICENSE  LOGIN_TROUBLESHOOTING.md  MISSING_FEATURES_ROADMAP.md  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_QUICK_REFERENCE.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE_0_ANALYSIS.md  PHASE_0_ASSUMPTIONS.md  PHASE_0_CHANGES.md  PHASE_0_CHECKLIST.md  PHASE_0_MAPPING.md  PHASE_0_RISKS.md  PHASE_0_TESTS.md  PHASE_1_ASSUMPTIONS.md  PHASE_1_CHANGES.md  PHASE_1_CHECKLIST.md  (+53 more)
backend/: Dockerfile  README_FIXES.md  alembic.ini  check_admin.py  create_admin.py  create_admin_postgres.py  debug_login.py  docker-entrypoint.sh  init.sql  init_admin.py  pyproject.toml  pytest.ini  requirements.txt  test_form.py  test_login.py  test_login_correct.py  test_login_direct.py  test_password.py  test_simple.py  test_simple_login.py
backend/adapters/: __init__.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: preflight.py  qemu_convert.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_image_conversion.py  test_images.py  test_integration.py  (+5 more)
(+192 files in other folders)
